@@ -1,5 +1,6 @@
 Broker:
 - Fix session expiry with very large expiry intervals. Closes #1525.
+- Check ACL patterns for validity when loading. Closes #1539.
 
 1.6.8 - 20191128
 ================
